--- a/index.html
+++ b/index.html
@@ -28,66 +28,12 @@
     <!--[if lt IE 9]>
       <script src="../../js/html5shiv.min.js"></script>
     <![endif]-->
-    <script>
-        // $(document).ready(function () {
-        //     var slick = $(".sec_project .cont .listArea");
-        //     $(slick).slick({
-        //         centerMode: true,
-        //         centerPadding: '60px',
-        //         slidesToShow: 3,
-        //         arrows: true,
-        //         adaptiveHeight: true,
-        //         centerMode: true,
-        //         centerPadding: '10px',
-        //         // autoplay: true,
-        //         autoplaySpeed: 4000,
-        //         responsive: [{
-        //             // breakpoint: 768,
-        //             settings: {
-        //                 centerPadding: '20vw',
-        //             }
-        //         }, {
-        //             // breakpoint: 480,
-        //             settings: {
-        //                 centerPadding: '0',
-        //                 arrows: false,
-        //             }
-        //         }]
-        //     });
-        // });
-        $(document).ready(function () {
-            var slick = $(".sec_project .cont .listArea");
-            $(slick).slick({
-                centerMode: true,
-                centerPadding: '500px',
-                slidesToShow: 1,
-                // autoplay: true,
-                autoplaySpeed: 4000,
-                responsive: [{
-                    breakpoint: 768,
-                    settings: {
-                        arrows: false,
-                        centerMode: true,
-                        centerPadding: '40px',
-                        slidesToShow: 3
-                    }
-                }, {
-                    breakpoint: 480,
-                    settings: {
-                        arrows: false,
-                        centerMode: true,
-                        centerPadding: '40px',
-                        slidesToShow: 1
-                    }
-                }]
-            });
-        });
-    </script>
 </head>
 
 <body>
     <div class="wrapper">
-        <header class="header headerWt">
+        <!-- <header class="header headerWt"> -->
+        <header class="header">
             <h1><a href="javascript:void(0);">SONJYE</a></h1>
             <nav class="mainNav">
                 <ul>
@@ -99,11 +45,11 @@
             </nav>
         </header>
         <section class="container sonjye_index">
-            <div class="title disNone">
-                <p>현황관리</p>
+            <div class="title">
+                <p>손졔의 포트폴리오</p>
             </div>
             <div class="content">
-                <section class="sec_intro">
+                <section class="sec_intro box box1">
                     <div class="tit">
                         <p>PORTPOLIO</p>
                         <!-- <p>MOBTUNE</p> -->
@@ -123,7 +69,7 @@
                         <div></div>
                     </div>
                 </section>
-                <section class="sec_aboutMe">
+                <section class="sec_aboutMe box box2">
                     <div class="box_aboutMe">
                         <div class="tit">
                             <!-- <p><strong>안녕하세요,</strong><br>퍼블리셔<br>
@@ -149,130 +95,6 @@
                         <div class="tit">
                             <p>About Me</p>
                         </div>
-                        <div class="cont">
-                            <div class="career">
-                                <div class="titBox">
-                                    <p>Career</p>
-                                </div>
-                                <div class="contBox">
-                                    <!-- <div>
-                                        <p>총 8년 1개월</p>
-                                    </div> -->
-                                    <div>
-                                        <p>인라이플</p>
-                                        <p>2021.12 ~ 재직중</p>
-                                    </div>
-                                    <div>
-                                        <p>디온소프트텍</p>
-                                        <p>2020.02 ~ 2021.11 </p>
-                                    </div>
-                                    <div>
-                                        <p>CMB</p>
-                                        <p>2012.03 ~ 2018.03 </p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="educate">
-                                <div class="titBox">
-                                    <p>Education</p>
-                                </div>
-                                <div class="contBox">
-                                    <div>
-                                        <p>웹/모바일 접근성</p>
-                                        <p>2014.05 ~ 2014.05 </p>
-                                        <!-- <p>대한상공회의소</p> -->
-                                        <!-- <p>웹/모바일 접근성 진단 평가 & NEXT WEB 과정</p> -->
-                                    </div>
-                                    <div>
-                                        <p>자바스크립트 & JQuery기초</p>
-                                        <p>2013. 11 ~ 2014. 01 </p>
-                                        <!-- <p>디자인티모</p> -->
-                                        <!-- <p>자바스크립트 & JQuery 기초</p> -->
-                                    </div>
-                                    <div>
-                                        <p>HTML5 & Javascript, CSS3 </p>
-                                        <p>2013. 09 ~ 2013. 09</p>
-                                        <!-- <p>웹타임교육센터</p> -->
-                                        <!-- <p>HTML5 & Javascript, CSS3</p> -->
-                                    </div>
-                                    <div>
-                                        <p>클라우드 환경의 DB구축을 위한 가상화 구현기 </p>
-                                        <p>2012. 10 ~ 2012. 10 </p>
-                                        <!-- <p>디지털인재개발원</p>
-                                    <p>클라우드 환경의 DB구축을 위한 가상화 구현기법</p> -->
-                                    </div>
-                                    <div>
-                                        <p>XHTML+CSS웹표준</p>
-                                        <p>2012. 05 ~ 2012. 06 </p>
-                                        <!-- <p>더조은컴퓨터아트학원</p>
-                                    <p>XHTML+CSS웹표준</p> -->
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="certificate">
-                                <div class="titBox">
-                                    <p>Certificate</p>
-                                </div>
-                                <div class="contBox">
-                                    <div>
-                                        <p>정보기기운용기능사 </p>
-                                        <p>2007. 11 </p>
-                                        <!-- <p>한국산업인력공단</p> -->
-                                    </div>
-                                    <div>
-                                        <p>컴퓨터활용능력 2급 </p>
-                                        <p>2007. 08 </p>
-                                        <!-- <p>대한상공회의소</p> -->
-                                    </div>
-                                    <div>
-                                        <p>워드프로세서 1급</p>
-                                        <p>2007. 03 </p>
-                                        <!-- <p>대한상공회의소</p> -->
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="levelEducate">
-                                <div class="titBox">
-                                    <p>Completion</p>
-                                </div>
-                                <div class="contBox">
-                                    <div>
-                                        <p>학점은행제</p>
-                                        <p>2013. 03 ~ 2014. 01 </p>
-                                        <!-- <p>정보통신공학 </p> -->
-                                    </div>
-                                    <div>
-                                        <p>명지전문대학</p>
-                                        <p>2009. 03 ~ 2012. 02</p>
-                                        <!-- <p>정보통신과</p> -->
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="skills">
-                                <div class="titBox">
-                                    <p>Skills</p>
-                                </div>
-                                <div class="contBox">
-                                    <div>
-                                        <p>(기획부터 퍼블리싱까지)</p>
-                                    </div>
-                                    <div>
-                                        <p>HTML</p>
-                                        <p>CSS</p>
-                                        <p>Jquery</p>
-                                        <p>Zeplin</p>
-                                        <p>Photoshop</p>
-                                        <p>Illustrator</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--// box_career end -->
-                    <div class="box_career">
-                        <!-- <div class="tit">
-                            <p>About Me</p>
-                        </div> -->
                         <div class="cont">
                             <div class="career">
                                 <div class="titBox">
@@ -392,7 +214,7 @@
                     <!--// box_career end -->
                 </section>
                 <!--//sec_aboutMe end-->
-                <section class="sec_project">
+                <section class="sec_project box box3">
                     <div class="box_work">
                         <!-- <div class="tit">
                             <p>PROJECT</p>
@@ -609,11 +431,20 @@
                     <!--// box_aboutMe end -->
                 </section>
                 <!--//sec_work end-->
-                <section>
+                <section class="box box4">
                     <div>THANKS</div>
                 </section>
             </div>
             <!--// content end -->
+            <div class="dot disNone">
+                <ul>
+                    <li class="active">MAIN</li>
+                    <li>About ME</li>
+                    <li>Work</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+            <!--dot end-->
         </section>
         <!--//container end-->
         <footer>
