--- a/source/html/0_index/01_index.html
+++ b/source/html/0_index/01_index.html
@@ -35,7 +35,7 @@
 <body>
     <div class="wrapper sonjye_index">
         <!-- <header class="header headerWht"> -->
-        <header class="header ">
+        <header class="header headerWht">
             <h1><a href="javascript:void(0);">SONJYE</a></h1>
             <nav class="mainNav">
                 <ul>
