--- a/source/html/mobtune/sub.html
+++ b/source/html/mobtune/sub.html
@@ -33,11 +33,11 @@
 </head>
 
 <body>
-    <div class="wrapper sonjye_sub">
+    <div class="wrapper sonjye_tuneSub">
         <!-- <header class="header headerWht"> -->
         <header class="header">
             <h1><a href="../../../index.html">SONJYE</a></h1>
-            <nav class="mainNav">
+            <nav class="gnb">
                 <ul>
                     <li><a href="../../../index.html">MAIN</a></li>
                     <li><a href="javascript:void(0);">About ME</a></li>
@@ -45,8 +45,7 @@
                         <div class="depth">
                             <ul>
                                 <li><a href="javascript:void(0);">모비튠</a></li>
-                                <li><a href="javascript:void(0);">ABM남양</a></li>
-                                <li><a href="javascript:void(0);">마이원페이</a></li>
+                                <li><a href="../namyang/sub.html">ABM남양</a></li>
                             </ul>
                         </div>
                     </li>
@@ -54,13 +53,10 @@
                 </ul>
             </nav>
         </header>
-        <nav class="subNav">
+        <nav class="snb">
             <ul>
                 <li class="on"><a href="javascript:void(0);">모비튠</a></li>
-                <li><a href="javascript:void(0);">ABM남양</a></li>
-                <li><a href="javascript:void(0);">마이원페이</a></li>
-                <li><a href="javascript:void(0);">외부인력 활용/관리</a></li>
-                <li><a href="javascript:void(0);">모비피드</a></li>
+                <li><a href="../namyang/sub.html">ABM남양</a></li>
             </ul>
         </nav>
         <section class="container">
@@ -71,8 +67,6 @@
                         <li class="on"><a href="javascript:void(0)">RFM분석</a></li>
                         <li><a href="javascript:void(0)">캠페인리스트</a></li>
                         <li><a href="javascript:void(0)">유저정보</a></li>
-                        <li><a href="javascript:void(0)">서브2</a></li>
-                        <li><a href="javascript:void(0)">서브3</a></li>
                     </ul>
                 </div>
             </div>
