--- a/index.html
+++ b/index.html
@@ -9,25 +9,19 @@
     <meta name="author" content="SONJYE" />
     <link rel="shortcut icon" href="./source/image/favicon/favicon.ico" type="image/ico">
     <title>SONJYE</title>
-    <!-- 기본 CSS, JS -->
-    <link type="text/css" href="./source/css/base.css" rel="stylesheet" />
     <script type="text/javascript" src="./source/js/jquery-2.2.2.min.js"></script>
-    <!-- //기본 CSS, JS -->
-    <link type="text/css" href="./source/css/common.css" rel="stylesheet" />
-    <script src="./source/js/jquery.easing.1.3.js"></script>
-    <script src="./source/js/lib/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="./source/js/jquery.easing.1.3.js"></script>
+    <script type="text/javascript" src="./source/js/lib/jquery-ui.min.js"></script>
     <script type="text/javascript" src="./source/js/lib/moment.min.js"></script>
     <script type="text/javascript" src="./source/js/lib/daterangepicker_popup.js"></script>
-    <link type="text/css" href="./source/css/lib/daterangepicker_popup.css" rel="stylesheet" />
-    <script src="./source/js/ui.js"></script>
     <!-- slick -->
     <script type="text/javascript" src="./source/js/lib/slick-1.8.1/slick/slick.min.js"></script>
-    <script type="text/css" src="./source/js/lib/slick-1.8.1/slick/slick.css"></script>
-    <script type="text/css" src="./source/js/lib/slick-1.8.1/slick/slick-theme.css"></script>
+    <link type="text/css" rel="stylesheet" src="./source/js/lib/slick-1.8.1/slick/slick.css" />
+    <link type="text/css" rel="stylesheet" src="./source/js/lib/slick-1.8.1/slick/slick-theme.css" />
     <!--// slick end -->
-    <!--[if lt IE 9]>
-      <script src="../../js/html5shiv.min.js"></script>
-    <![endif]-->
+    <script type="text/javascript" src="./source/js/ui.js"></script>
+    <link type="text/css" rel="stylesheet" href="./source/css/lib/daterangepicker_popup.css" />
+    <link type="text/css" rel="stylesheet" href="./source/css/common.css" />
 </head>
 
 <body>
@@ -35,7 +29,7 @@
         <!-- <header class="header headerWht"> -->
         <header class="header headerWht">
             <h1><a href="javascript:void(0);">SONJYE</a></h1>
-            <nav class="mainNav">
+            <nav class="gnb">
                 <ul>
                     <li class="on"><a href="javascript:void(0);">MAIN</a></li>
                     <li><a href="javascript:void(0);">About ME</a></li>
@@ -43,8 +37,7 @@
                         <div class="depth">
                             <ul>
                                 <li><a href="./source/html/mobtune/sub.html">모비튠</a></li>
-                                <li><a href="javascript:void(0);">ABM남양</a></li>
-                                <li><a href="javascript:void(0);">마이원페이</a></li>
+                                <li><a href="./source/html/namyang/sub.html">ABM남양</a></li>
                             </ul>
                         </div>
                     </li>
@@ -57,31 +50,16 @@
                 <p>손졔의 포트폴리오</p>
             </div>
             <div class="content">
-                <section class="sec_intro box box1">
-                    <div class="tit">
+                <section class="sec_intro">
+                    <div class="txtBox">
                         <p>PORTPOLIO</p>
-                        <!-- <p>MOBTUNE</p> -->
-                        <!-- <p>SONJYE</p> -->
-                        <p>Hello. publicsher Son jihye portfolio - 2022</p>
-                        <!-- <p>2022</p> -->
-                    </div>
-                    <div class="cont">
-                        <!-- <div class="link">
-                            <div class="titBox">
-                                <p>About</p>
-                            </div>
-                            <div class="contBox">01</div>
-                        </div> -->
-                        <div></div>
-                        <div></div>
-                        <div></div>
+                        <p>Hello. publicsher Son jihye portfolio - 2023</p>
                     </div>
                 </section>
-                <section class="sec_aboutMe box box2">
+                <!--// sec_intro END -->
+                <section class="sec_aboutMe">
                     <div class="box_aboutMe">
                         <div class="tit">
-                            <!-- <p><strong>안녕하세요,</strong><br>퍼블리셔<br>
-                                <strong>손지혜</strong>입니다.</p> -->
                             <p>안녕하세요,</p>
                             <p>만나서 반갑습니다</p>
                         </div>
@@ -91,13 +69,12 @@
                                 <p>Son-Ji-Hye</p>
                             </div>
                             <div class="contBox">
-                                <!-- <p>SON JI HYE</p> -->
                                 <p>1990.05.10</p>
                                 <p>aqua178@naver.com</p>
                             </div>
                         </div>
                     </div>
-                    <!--// box_aboutMe end -->
+                    <!--// box_aboutMe END -->
                     <div class="box_career">
                         <div class="tit">
                             <p>About Me</p>
@@ -215,25 +192,56 @@
                             </div>
                         </div>
                     </div>
-                    <!--// box_career end -->
+                    <!--// box_career END -->
                 </section>
-                <!--//sec_aboutMe end-->
-                <section class="sec_project box box3">
+                <!--//sec_aboutMe END-->
+                <section class="sec_project">
                     <div class="box_work">
                         <div class="tit">
                             <p>PROJECT</p>
                         </div>
                         <div class="cont">
-                            <!-- <div class="tab">
-                                <ul>
-                                    <li>Web</li>
-                                    <li>Mobile</li>
-                                </ul>
-                            </div> -->
                             <div class="listArea">
                                 <div class="list">
                                     <div class="titBox">
-                                        <p>마이원페이 어드민 로고</p>
+                                        <p>모비튠</p>
+                                        <p>고객 관계 관리(CRM) 플랫폼</p>
+                                    </div>
+                                    <div class="contBox">
+                                        <div class="imgBox">모비온 외부인력 활용/관리</div>
+                                        <div class="txtBox">
+                                            <p>모비튠은 사이트에서 고객이 취하는 수많은 액션들을 다양한 목적에 따라 조합하고 활용할 수 있도록 도움을 드리는 CRM(고객 관계
+                                                관리)Tool 입니다.</p>
+                                        </div>
+                                        <div class="percentBox">
+                                            <p>참여도 : 90%</p>
+                                            <div class="graphBox">
+                                                <div>
+                                                    <div style="width: 100%"></div>
+                                                </div>
+                                                <div>
+                                                    <div style="width: 100%"></div>
+                                                </div>
+                                                <div>
+                                                    <div style="width: 100%"></div>
+                                                </div>
+                                                <div>
+                                                    <div style="width: 100%"></div>
+                                                </div>
+                                                <div>
+                                                    <div style="width: 50%"></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="buttonBox"><button type="button" class="more">MORE View</button>
+                                        </div>
+                                        <div class="detailBox">
+                                        </div>
+                                    </div>
+                                </div>
+                                <!--// list -1 end -->
+                                <div class="list">
+                                    <div class="titBox">
                                         <p>마이원페이 어드민</p>
                                         <p>마이원페이 어드민 설명입니다.</p>
                                     </div>
@@ -267,10 +275,9 @@
                                         </div>
                                     </div>
                                 </div>
-                                <!--// list -1 end -->
+                                <!--// list -2 end -->
                                 <div class="list">
                                     <div class="titBox">
-                                        <p>ABM 남양 로고</p>
                                         <p>ABM 남양</p>
                                         <p>ABM 남양 설명입니다.</p>
                                     </div>
@@ -308,8 +315,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <!--// list -2 end -->
-                                <div class="list">
+                                <!--// list -3 end -->
+                                <!-- <div class="list">
                                     <div class="titBox">
                                         <p>모비온 외부인력 활용/관리 로고</p>
                                         <p>모비온 외부인력 활용/관리</p>
@@ -347,48 +354,9 @@
                                         <div class="detailBox">
                                         </div>
                                     </div>
-                                </div>
-                                <!--// list -3 end -->
-                                <div class="list">
-                                    <div class="titBox">
-                                        <p>모비튠</p>
-                                        <p>모비튠</p>
-                                        <p>모비튠</p>
-                                    </div>
-                                    <div class="contBox">
-                                        <div class="imgBox">모비온 외부인력 활용/관리</div>
-                                        <div class="txtBox">
-                                            <p>모비튠은 사이트에서 고객이 취하는 수많은 액션들을 다양한 목적에 따라 조합하고 활용할 수 있도록 도움을 드리는 CRM(고객 관계
-                                                관리)Tool 입니다.</p>
-                                        </div>
-                                        <div class="percentBox">
-                                            <p>참여도 : 90%</p>
-                                            <div class="graphBox">
-                                                <div>
-                                                    <div style="width: 100%"></div>
-                                                </div>
-                                                <div>
-                                                    <div style="width: 100%"></div>
-                                                </div>
-                                                <div>
-                                                    <div style="width: 100%"></div>
-                                                </div>
-                                                <div>
-                                                    <div style="width: 100%"></div>
-                                                </div>
-                                                <div>
-                                                    <div style="width: 50%"></div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="buttonBox"><button type="button" class="more">MORE View</button>
-                                        </div>
-                                        <div class="detailBox">
-                                        </div>
-                                    </div>
-                                </div>
+                                </div> -->
                                 <!--// list -4 end -->
-                                <div class="list">
+                                <!-- <div class="list">
                                     <div class="titBox">
                                         <p>모비피드</p>
                                         <p>모비피드</p>
@@ -424,7 +392,7 @@
                                         <div class="detailBox">
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                                 <!--// list -5 end -->
                             </div>
                         </div>
