--- a/index.html
+++ b/index.html
@@ -242,8 +242,8 @@
                                 <!--// list -1 end -->
                                 <div class="list">
                                     <div class="titBox">
-                                        <p>마이원페이 어드민</p>
-                                        <p>마이원페이 어드민 설명입니다.</p>
+                                        <p>ABM 남양</p>
+                                        <p>ABM(AI Big-data Management) 플랫폼 </p>
                                     </div>
                                     <div class="contBox">
                                         <div class="imgBox">마이원페이 어드민</div>
