--- a/2304_apptalk/source/html/apptalk/list.html
+++ b/2304_apptalk/source/html/apptalk/list.html
@@ -35,18 +35,20 @@
             <section class="sec_list">
                 <ul>
                     <li>
-                        <div class="list">
-                            <div class="imgBox">
-                                <img src="../../image/test/image_ico.png" alt="">
+                        <a href="../apptalk/detail.html">
+                            <div class="list">
+                                <div class="imgBox">
+                                    <img src="../../image/test/image_ico.png" alt="">
+                                </div>
+                                <div class="textBox">
+                                    <p>고객님 안녕하세요!<br>최근 고객님의 방문이 뜸해져뜸해져뜸해져뜸해져뜸해져뜸해져뜸해져뜸해져뜸해져뜸해져뜸해져뜸해져</p>
+                                </div>
+                                <div class="alarmBox">
+                                    <p>방금 전</p>
+                                    <p>1</p>
+                                </div>
                             </div>
-                            <div class="textBox">
-                                <p>고객님 안녕하세요!<br>최근 고객님의 방문이 뜸해져뜸해져뜸해져뜸해져뜸해져뜸해져뜸해져뜸해져뜸해져뜸해져뜸해져뜸해져</p>
-                            </div>
-                            <div class="alarmBox">
-                                <p>방금 전</p>
-                                <p>1</p>
-                            </div>
-                        </div>
+                        </a>
                     </li>
                     <li>
                         <a href="#">
