--- a/2304_apptalk/source/html/apptalk/list.html
+++ b/2304_apptalk/source/html/apptalk/list.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+    <!-- 앱톡 리스트 -->
     <div class="wrapper apptalk_list">
         <header class="header">
             <div class="title">
@@ -41,7 +42,7 @@
                                     <img src="../../image/test/image_ico.png" alt="">
                                 </div>
                                 <div class="textBox">
-                                    <p>고객님 안녕하세요!<br>최근 고객님의 방문이 뜸해져뜸해져뜸해져뜸해져뜸해져뜸해져뜸해져뜸해져뜸해져뜸해져뜸해져뜸해져</p>
+                                    <p>고객님 안녕하세요!최근 고객님의 방문이 뜸해져뜸해져뜸해져뜸해져뜸해져뜸해져뜸해져뜸해져뜸해져뜸해져뜸해져뜸해져</p>
                                 </div>
                                 <div class="alarmBox">
                                     <p>방금 전</p>
