--- a/2304_apptalk/source/html/product/list.html
+++ b/2304_apptalk/source/html/product/list.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+    <!-- 내가 본 상품 리스트  -->
     <div class="wrapper apptalk_productList">
         <header class="header">
             <div class="title">
