--- a/work/2408_permission_guide/html/gift.html
+++ b/work/2408_permission_guide/html/gift.html
@@ -8,14 +8,9 @@
     <meta name="description" content="MOBON" />
     <meta name="keywords" content="MOBON" />
     <meta name="author" content="인라이플" />
-    <title>permission</title>
+    <title>포미션</title>
     <link type="image/ico" rel="shortcut icon" href="../../image/favicon/favicon.ico">
-    <script type="text/javascript" src="../../js/lib/jquery-2.2.2.min.js"></script>
-    <script type="text/javascript" src="../../js/lib/jquery.easing.1.3.js"></script>
-    <script type="text/javascript" src="../../js/lib/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="../../js/lib/moment.min.js"></script>
-    <script type="text/javascript" src="../../js/ui.js"></script>
-    <link type="text/css" rel="stylesheet" href="../../css/common.css">
+    <link type="text/css" rel="stylesheet" href="../css/common.css">
 </head>
 
 <body>
