--- a/work/2408_permission_guide/html/guidePlace.html
+++ b/work/2408_permission_guide/html/guidePlace.html
@@ -30,7 +30,14 @@
                     </div>
                     <div class="cont">
                         <ul>
-                            <li>플레이스 검색 후 저장</li>
+                            <li>플레이스 검색 후 저장
+                                <!-- 이미지 추가 -->
+                                <!-- border 없어도 되는 경우 brdNone 클래스 추가-->
+                                <!-- <div class="prodDetail brdNone"> -->
+                                <div class="prodDetail">
+                                    <img src="../image/example/img_ex3.png" alt="">
+                                </div>
+                            </li>
                             <li>저장화면 캡처</li>
                             <li>캡처이미지 업로드</li>
                             <li>리워드 지급</li>
@@ -70,6 +77,10 @@
                             </li>
                         </ul>
                     </div>
+                </section>
+                <section class="sec_report">
+                    <p>미션 참여가 어려우신가요?</p>
+                    <a href="#">신고하기</a>
                 </section>
             </div>
         </section>
