--- a/work/2408_permission_guide/html/guideGift.html
+++ b/work/2408_permission_guide/html/guideGift.html
@@ -30,7 +30,15 @@
                     </div>
                     <div class="cont">
                         <ul>
-                            <li>플레이스 검색 후 클릭</li>
+                            <li>쇼핑 검색 후 상품 클릭 </li>
+                            <li>해당 판매처를 찾아서 클릭
+                                <!-- 이미지 추가 -->
+                                <!-- border 없어도 되는 경우 brdNone 클래스 추가-->
+                                <!-- <div class="prodDetail brdNone"> -->
+                                <div class="prodDetail">
+                                    <img src="../image/example/img_ex11.jpg" alt="">
+                                </div>
+                            </li>
                             <li>질문 및 정답확인</li>
                             <li>정답입력</li>
                             <li>리워드 지급</li>
@@ -60,7 +68,7 @@
                             <li>
                                 <p>검색어를 복사해주세요.</p>
                                 <p>(복사 안될 시 아래 텍스트 복사)</p>
-                                <p>서울특별시청</p>
+                                <p>삼성 갤럭시 S24</p>
                             </li>
                             <li>
                                 <p>복사한 검색어를 네이버 검색창에 <br>입력하고 검색하기</p>
@@ -76,6 +84,10 @@
                             </li>
                         </ul>
                     </div>
+                </section>
+                <section class="sec_report">
+                    <p>미션 참여가 어려우신가요?</p>
+                    <a href="#">신고하기</a>
                 </section>
             </div>
         </section>
