--- a/work/2408_permission_guide/html/guideGiftNumber.html
+++ b/work/2408_permission_guide/html/guideGiftNumber.html
@@ -30,7 +30,8 @@
                     </div>
                     <div class="cont">
                         <ul>
-                            <li>쇼핑 검색 후 상품 클릭
+                            <li>
+                                <p>쇼핑 검색 후 상품 클릭</p>
                                 <!-- 이미지 추가 -->
                                 <!-- border 없어도 되는 경우 brdNone 클래스 추가-->
                                 <!-- <div class="prodDetail brdNone"> -->
@@ -38,7 +39,8 @@
                                     <img src="../image/example/img_ex3.png" alt="">
                                 </div>
                             </li>
-                            <li>해당 판매처를 찾아서 클릭
+                            <li>
+                                <p>해당 판매처를 찾아서 클릭</p>
                                 <!-- 이미지 추가 -->
                                 <!-- border 없어도 되는 경우 brdNone 클래스 추가-->
                                 <!-- <div class="prodDetail brdNone"> -->
@@ -46,9 +48,15 @@
                                     <img src="../image/example/img_ex11.jpg" alt="">
                                 </div>
                             </li>
-                            <li>질문 및 정답확인</li>
-                            <li>정답입력</li>
-                            <li>리워드 지급</li>
+                            <li>
+                                <p>질문 및 정답확인</p>
+                            </li>
+                            <li>
+                                <p>정답입력</p>
+                            </li>
+                            <li>
+                                <p>리워드 지급</p>
+                            </li>
                         </ul>
                         <div class="guide">
                             <p>업체명: 국민알뜰폰</p>
