--- a/work/2408_permission_guide/html/guideGiftNumber.html
+++ b/work/2408_permission_guide/html/guideGiftNumber.html
@@ -20,7 +20,7 @@
     <div class="wrap pm_guideGiftNumber">
         <section class="contents">
             <div class="title">
-                <p>미션 참여하고<br> 포인트 받기8</p>
+                <p>미션 참여하고<br> 포인트 받기9</p>
             </div>
             <div class="content">
                 <section class="sec_guide">
@@ -50,9 +50,11 @@
                             </li>
                             <li>
                                 <p>질문 및 정답확인</p>
+                                <div></div>
                             </li>
                             <li>
                                 <p>정답입력</p>
+                                <div></div>
                             </li>
                             <li>
                                 <p>리워드 지급</p>
