--- a/work/2408_permission_guide/html/guideGiftNumber.html
+++ b/work/2408_permission_guide/html/guideGiftNumber.html
@@ -20,7 +20,7 @@
     <div class="wrap pm_guideGiftNumber">
         <section class="contents">
             <div class="title">
-                <p>미션 참여하고<br> 포인트 받기13</p>
+                <p>미션 참여하고<br> 포인트 받기14</p>
             </div>
             <div class="content">
                 <section class="sec_guide">
@@ -30,17 +30,15 @@
                     </div>
                     <div class="cont">
                         <ul>
-                            <li>
-                                <p>쇼핑 검색 후 상품 클릭</p>
+                            <li> 쇼핑 검색 후 상품 클릭
                                 <!-- 이미지 추가 -->
                                 <!-- border 없어도 되는 경우 brdNone 클래스 추가-->
                                 <!-- <div class="prodDetail brdNone"> -->
-                                <div class="prodDetail">
+                                <div class="prodDetail brdNone">
                                     <img src="../image/example/img_ex3.png" alt="">
                                 </div>
                             </li>
-                            <li>
-                                <p>해당 판매처를 찾아서 클릭</p>
+                            <li> 해당 판매처를 찾아서 클릭
                                 <!-- 이미지 추가 -->
                                 <!-- border 없어도 되는 경우 brdNone 클래스 추가-->
                                 <!-- <div class="prodDetail brdNone"> -->
@@ -48,17 +46,9 @@
                                     <img src="../image/example/img_ex11.jpg" alt="">
                                 </div>
                             </li>
-                            <li>
-                                <p>질문 및 정답확인</p>
-                                <div></div>
-                            </li>
-                            <li>
-                                <p>정답입력</p>
-                                <div></div>
-                            </li>
-                            <li>
-                                <p>리워드 지급</p>
-                            </li>
+                            <li> 질문 및 정답확인 </li>
+                            <li> 정답입력 </li>
+                            <li> 리워드 지급 </li>
                         </ul>
                         <div class="guide">
                             <p>업체명: 국민알뜰폰</p>
