--- a/work/2408_permission_guide/html/guideGift.html
+++ b/work/2408_permission_guide/html/guideGift.html
@@ -85,17 +85,13 @@
                         </ul>
                     </div>
                 </section>
-                <section class="sec_report">
-                    <p>미션 참여가 어려우신가요?</p>
-                    <a href="#">신고하기</a>
-                </section>
             </div>
         </section>
         <!--// contnets end -->
         <footer>
             <div class="guide">
-                <p>* 저장 취소 시 서비스 이용에 제한이 있습니다.</p>
-                <!-- <p>정답 공유 시 서비스 이용에 제한이 있습니다.</p> -->
+                <p>* 저장 후 30일을 유지하지 않고 취소하면 서비스 이용에 제한이 있습니다. </p>
+                <button type="button" class="report">오류 접수</button>
             </div>
             <div class="inputSave">
                 <input type="text" placeholder="질문 확인 후 정답을 입력해 주세요.">
