--- a/work/2408_permission_guide/html/guideGiftNumber.html
+++ b/work/2408_permission_guide/html/guideGiftNumber.html
@@ -20,7 +20,7 @@
     <div class="wrap pm_guideGiftNumber">
         <section class="contents">
             <div class="title">
-                <p>미션 참여하고<br> 포인트 받기15</p>
+                <p>미션 참여하고<br> 포인트 받기</p>
             </div>
             <div class="content">
                 <section class="sec_guide">
@@ -95,17 +95,13 @@
                         </ul>
                     </div>
                 </section>
-                <section class="sec_report">
-                    <p>미션 참여가 어려우신가요?</p>
-                    <a href="#">신고하기</a>
-                </section>
             </div>
         </section>
         <!--// contnets end -->
         <footer>
             <div class="guide">
                 <!-- <p>* 저장 취소 시 서비스 이용에 제한이 있습니다.</p> -->
-                <p>* 정답 공유 시 서비스 이용에 제한이 있습니다.</p>
+                <p>* 정답 공유 시 서비스 이용에 제한이 있습니다.</p> <button type="button" class="report">오류 접수</button>
             </div>
             <div class="inputSave">
                 <input type="text" placeholder="상품번호 앞 6자리를 입력해주세요">
