--- a/work/2408_permission_guide/html/guidePlace.html
+++ b/work/2408_permission_guide/html/guidePlace.html
@@ -78,17 +78,13 @@
                         </ul>
                     </div>
                 </section>
-                <section class="sec_report">
-                    <p>미션 참여가 어려우신가요?</p>
-                    <a href="#">신고하기</a>
-                </section>
             </div>
         </section>
         <!--// contnets end -->
         <footer>
             <div class="guide">
-                <p><b>저장 후 30일</b>을 유지해주세요. </p>
-                <p>저장 취소 시 서비스 이용에 제한이 있습니다.</p>
+                <p>* 저장 후 30일을 유지하지 않고 취소하면 서비스 이용에 제한이 있습니다. </p>
+                <button type="button" class="report">오류 접수</button>
             </div>
             <button type="button" class="upload">캡처 이미지 업로드</button>
         </footer>
