--- a/work/2408_permission_guide/html/guideQuiz.html
+++ b/work/2408_permission_guide/html/guideQuiz.html
@@ -90,6 +90,7 @@
             <div class="guide">
                 <p>* 저장 취소 시 서비스 이용에 제한이 있습니다.</p>
                 <!-- <p>정답 공유 시 서비스 이용에 제한이 있습니다.</p> -->
+                <button type="button" class="report">오류 접수</button>
             </div>
             <div class="inputSave">
                 <input type="text" placeholder="질문 확인 후 정답을 입력해 주세요.">
