--- a/work/2408_permission_guide/html/guideRewardBM.html
+++ b/work/2408_permission_guide/html/guideRewardBM.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge, chrome=1" />
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
+    <meta http-equiv="Expires" content="-1">
+    <meta http-equiv="Pragma" content="no-cache">
     <meta name="description" content="MOBON" />
     <meta name="keywords" content="MOBON" />
     <meta name="author" content="인라이플" />
