--- a/work/2408_permission_guide/html/guideRewardBM.html
+++ b/work/2408_permission_guide/html/guideRewardBM.html
@@ -12,7 +12,7 @@
     <meta name="author" content="인라이플" />
     <title>포미션</title>
     <link type="image/ico" rel="shortcut icon" href="../image/favicon/favicon.ico">
-    <link type="text/css" rel="stylesheet" href="../css/common.css">
+    <link type="text/css" rel="stylesheet" href="../css/common2.css">
 </head>
 
 <body>
