--- a/work/2408_permission_guide/html/guideRewardBM.html
+++ b/work/2408_permission_guide/html/guideRewardBM.html
@@ -12,7 +12,7 @@
     <meta name="author" content="인라이플" />
     <title>포미션</title>
     <link type="image/ico" rel="shortcut icon" href="../image/favicon/favicon.ico">
-    <link type="text/css" rel="stylesheet" href="../css/common2.css">
+    <link type="text/css" rel="stylesheet" href="../css/common.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
     <div class="wrap pm_guideRewardBM">
         <section class="contents">
             <div class="title">
-                <p>미션 참여하고<br> 리워드 받기11</p>
+                <p>미션 참여하고<br> 리워드 받기12</p>
             </div>
             <div class="content">
                 <section class="sec_guide">
