--- a/work/2408_permission_guide/html/guideRewardBM.html
+++ b/work/2408_permission_guide/html/guideRewardBM.html
@@ -20,7 +20,7 @@
     <div class="wrap pm_guideRewardBM">
         <section class="contents">
             <div class="title">
-                <p>미션 참여하고<br> 리워드 받기20</p>
+                <p>미션 참여하고<br> 리워드 받기</p>
             </div>
             <div class="content">
                 <section class="sec_guide">
