--- a/work/2408_permission_guide/html/guideRewardBM.html
+++ b/work/2408_permission_guide/html/guideRewardBM.html
@@ -13,14 +13,14 @@
     <link type="text/css" rel="stylesheet" href="../css/common.css">
 </head>
 
-<body inmaintabuse="1">
+<body>
     <!-- 리워드 받기 (배민) -->
     <!-- pm_guideRewardBM 클래스는 해당 페이지를 구분하는 id 값으로 사용하는 클래스입니다. 
      다른 페이지에는 사용을 지양해주시기 바랍니다.(추후 유지보수때 css 수정 어려움) -->
     <div class="wrap pm_guideRewardBM">
         <section class="contents">
             <div class="title">
-                <p>미션 참여하고<br> 리워드 받기2</p>
+                <p>미션 참여하고<br> 리워드 받기</p>
             </div>
             <div class="content">
                 <section class="sec_guide">
