--- a/work/2408_permission_guide/html/guide/guidePlaceURL.html
+++ b/work/2408_permission_guide/html/guide/guidePlaceURL.html
@@ -34,7 +34,7 @@
                         </div>
                     </div>
                     <div class="modalFooter">
-                        <button type="button" class="confirm">확인</button>
+                        <button type="button" class="confirm modalClose">확인</button>
                     </div>
                 </div>
                 <div class="modalDim"></div>
