--- a/work/2408_permission_guide/html/guide/guideSaveQuiz.html
+++ b/work/2408_permission_guide/html/guide/guideSaveQuiz.html
@@ -50,11 +50,11 @@
                 <section class="sec_guide">
                     <div class="tit">
                         <p>업체명</p>
-                        <p>네이버 플레이스 저장 후 정답 입력</p>
+                        <p>네이버 플레이스 정답 확인 후 저장</p>
                     </div>
                     <div class="cont">
                         <ul>
-                            <li>플레이스 검색 후 저장
+                            <li>플레이스 검색 후 클릭
                                 <!-- 이미지 추가 -->
                                 <!-- border 없어도 되는 경우 brdNone 클래스 추가-->
                                 <!-- <div class="prodDetail brdNone"> -->
@@ -62,9 +62,9 @@
                                     <img src="../../image/example/img_place.png" alt="">
                                 </div>
                             </li>
-                            <li>저장화면 캡처</li>
-                            <li>질문 정답입력</li>
-                            <li>정답확인 후 리워드 지급</li>
+                            <li>질문 및 정답확인</li>
+                            <li>플레이스 저장 후 캡처</li>
+                            <li>정답입력 후 이미지 업로드</li>
                         </ul>
                         <!-- <div class="guide">
                             <p>플레이스 방문 후 [주변] 탭으로 이동하여 [명소] 탭 클릭 후 [1번째]를 입력해주세요.</p>
@@ -99,7 +99,10 @@
                                 <p>플레이스 클릭 방법2</p>
                             </li>
                             <li>
-                                <p>저장 후 화면 캡처</p>
+                                <p>질문 확인 후 정답 찾기</p>
+                            </li>
+                            <li>
+                                <p>저장 후 화면 캡쳐</p>
                                 <p>AI 이미지 분석으로 실시간 확인 후 적립됩니다.</p>
                                 <div class="noti">
                                     <p> <span>[캡처 유의사항]</span></p>
@@ -108,8 +111,6 @@
                                     <p>저장버튼 활성화 상태를 캡처하기</p>
                                     <p>다크모드 해제 후 캡처하기</p>
                                 </div>
-                            <li>
-                                <p>질문 확인 후 정답 찾기</p>
                             </li>
                         </ul>
                     </div>
@@ -119,42 +120,24 @@
         <!--// contnets end -->
         <footer>
             <div class="guide">
-                <p>※ 저장 후 30일을 유지해야 합니다.</p>
-                <!-- <p>※ 정답 공유 시 서비스 이용에 제한이 있습니다.</p> -->
+                <!-- <p>※ 저장 후 30일을 유지해야 합니다.</p> -->
+                <p>※ 정답 공유 시 서비스 이용에 제한이 있습니다.</p>
                 <button type="button" class="report">오류 접수</button>
             </div>
             <div class="bubbleBox">
                 <button type="button" class="close">닫기</button>
-                <p>이미지 업로드 후 정답을 입력할 수 있어요.</p>
-                <!-- <p>정답을 입력하고 적립받기를 클릭해 주세요.</p> -->
+                <p>정답을 입력하고 이미지를 업로드 해주세요.</p>
+                <!-- <p>캡처 이미지 업로드 후 적립 받을 수 있어요.</p> -->
             </div>
             <div class="inputSave">
                 <input type="text" placeholder="정답을 입력해 주세요.">
-                <button type="button" data-popname="md_alert" class="save modalOpen">적립받기</button>
+                <!-- button에 있는 modalOpen 클래스는 모달 확인을 위해 추가한 클래스이므로 
+                 해당 버튼에서 모달이 필요없다면 삭제하고 사용하시기 바랍니다. -->
+                <button type="button" data-popname="md_alert" class="save modalOpen">정답확인</button>
             </div>
             <!-- <div class="buttonBox">
                 <button type="button" class="upload">캡처 이미지 업로드</button>
             </div> -->
-        </footer>
-        <!--// footer end -->
-        <footer>
-            <div class="guide">
-                <p>※ 저장 후 30일을 유지해야 합니다.</p>
-                <!-- <p>※ 정답 공유 시 서비스 이용에 제한이 있습니다.</p> -->
-                <button type="button" class="report">오류 접수</button>
-            </div>
-            <div class="bubbleBox">
-                <button type="button" class="close">닫기</button>
-                <!-- <p>이미지 업로드 후 정답을 입력할 수 있어요.</p> -->
-                <p>정답을 입력하고 적립받기를 클릭해 주세요.</p>
-            </div>
-            <!-- <div class="inputSave">
-                <input type="text" placeholder="정답을 입력해 주세요.">
-                <button type="button" data-popname="md_alert" class="save modalOpen">적립받기</button>
-            </div> -->
-            <div class="buttonBox">
-                <button type="button" class="upload">캡처 이미지 업로드</button>
-            </div>
         </footer>
         <!--// footer end -->
     </div>
