--- a/work/permission_mission/source/html/mission/mission_video.html
+++ b/work/permission_mission/source/html/mission/mission_video.html
@@ -24,7 +24,7 @@
                     <div class="tit">
                         <p>imbc 인기 동영상 시청 후</p>
                         <p>포인트를 적립하세요.</p>
-                        <p>최대글자는띄어쓰기없이이정도최대글자는띄어쓰기없이이정도</p>
+                        <p><span>최대글자는띄어쓰기없이이정도최대글자는띄어쓰기없이이정도</span></p>
                         <p>최대글자는</p>
                     </div>
                     <div class="cont">
