--- a/work/permission_mission/source/html/mission/mission_video.html
+++ b/work/permission_mission/source/html/mission/mission_video.html
@@ -25,12 +25,17 @@
                         <p>imbc 인기 동영상 시청 후</p>
                         <p>포인트를 적립하세요.</p>
                         <p><span>최대글자는띄어쓰기없이이정도최대글자는띄어쓰기없이이정도</span></p>
-                        <p>최대글자는</p>
                     </div>
                     <div class="cont">
                         <div class="vidioBox">
-                            <!-- <video src=""></video> -->
-                            <img src="../../image/example/img_ex1.png" alt="" style="width:100%">
+                            <!-- 소스 확인을 위해 video 대신 image 태그 추가함-->
+                            <!-- <video src="https://www.youtube.com/watch?v=4HItCjlQ6Ys"></video> -->
+                            <iframe width="100%" height="315"
+                                src="https://www.youtube.com/embed/4HItCjlQ6Ys?si=BYInk8WcMKQLQuYa"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <!-- <img src="../../image/example/img_ex1.png" alt="" style="width:100%"> -->
                             <p>'파격' 이유갓지 않은 이유(박명수-아이유) - 한 편의 뮤지컬 같은 무대 &it;레옹&it; </p>
                         </div>
                         <div class="guide">
