--- a/work/permission_guide/html/guide/blogURL.html
+++ b/work/permission_guide/html/guide/blogURL.html
@@ -54,11 +54,19 @@
                     </div>
                     <div class="cont">
                         <ul>
-                            <li>블로그 내 삽입되어 있는 지도의 업체명을 클릭</li>
-                            <li>저장하고 '내 장소'에서 저장한 업체 클릭 </li>
-                            <li>지도 → 주변 정류장 탭 순으로 클릭<p class="em">*순서대로 클릭해야 정답이 됩니다.</p>
+                            <li>
+                                <p>블로그 내 삽입되어 있는 지도의 업체명을 클릭</p>
                             </li>
-                            <li>URL 복사 후 정답 입력</li>
+                            <li>
+                                <p>저장하고 '내 장소'에서 저장한 업체 클릭</p>
+                            </li>
+                            <li>
+                                <p>지도 → 주변 정류장 탭 순으로 클릭</p>
+                                <p class="em">*순서대로 클릭해야 정답이 됩니다.</p>
+                            </li>
+                            <li>
+                                <p>URL 복사 후 정답 입력</p>
+                            </li>
                         </ul>
                         <div class="guide">
                             <p>방문한 블로그에 삽입되어 있는 지도의 업체명을 클릭하여 방문 후 저장하고 내 장소를 클릭, 저장된 업체를 클릭 [지도 → 주변정류장 탭] 순으로 클릭 후 주소창
