--- a/work/permission_guide/html/guide/placeURL.html
+++ b/work/permission_guide/html/guide/placeURL.html
@@ -54,12 +54,20 @@
                     </div>
                     <div class="cont">
                         <ul>
-                            <li>복사한 키워드로 검색 후 플레이스 클릭 </li>
-                            <li>지도 → 사진 → 홈 탭 순으로 클릭 <p class="em">*순서대로 클릭해야 정답이 됩니다.</p>
+                            <li>
+                                <p>복사한 키워드로 검색 후 플레이스 클릭</p>
                             </li>
-                            <li>지도 → 주변 정류장 탭 순으로 클릭 <p class="sub">정답은 검색해서 플레이스 진입시 홈 탭 URL 카테고리별로 확인 부탁드려요.</p>
+                            <li>
+                                <p>지도 → 사진 → 홈 탭 순으로 클릭 </p>
+                                <p class="em">*순서대로 클릭해야 정답이 됩니다.</p>
                             </li>
-                            <li>리워드 지급 </li>
+                            <li>
+                                <p>지도 → 주변 정류장 탭 순으로 클릭</p>
+                                <p>정답은 검색해서 플레이스 진입시 홈 탭 URL 카테고리별로 확인 부탁드려요.</p>
+                            </li>
+                            <li>
+                                <p>리워드 지급</p>
+                            </li>
                         </ul>
                         <div class="guide">
                             <p>복사한 키워드로 검색하여 플레이스 클릭 후 [지도 → 사진 → 홈 탭] 순으로 클릭 후 주소창 링크 입력</p>
