--- a/work/permission_guide/html/guide/placeURL.html
+++ b/work/permission_guide/html/guide/placeURL.html
@@ -62,7 +62,7 @@
                                 <p class="em">*순서대로 클릭해야 정답이 됩니다.</p>
                             </li>
                             <li>
-                                <p>지도 → 주변 정류장 탭 순으로 클릭</p>
+                                <p>URL 복사 후 정답 입력</p>
                                 <p>정답은 검색해서 플레이스 진입시 홈 탭 URL 카테고리별로 확인 부탁드려요.</p>
                             </li>
                             <li>
