--- a/work/permission_guide/html/guide/blogURL.html
+++ b/work/permission_guide/html/guide/blogURL.html
@@ -55,7 +55,7 @@
                     <div class="cont">
                         <ul>
                             <li>
-                                <p>블로그 내 삽입되어 있는 지도의 업체명을 클릭</p>
+                                <p>블로그 내 삽입되어 있는 지도의<br> 업체명을 클릭</p>
                             </li>
                             <li>
                                 <p>저장하고 '내 장소'에서 저장한 업체 클릭</p>
